welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:6: error: reassignment to val
      maximum = element
              ^extrema:9: error: reassignment to val
      minimum = element
              ^