welcome.lessons.welcome.array.search.Extrema.scala.code
def extrema(nums:Array[Int]): Int = {
  val maximum = nums(0)
  val minimum = nums(0)
  for (element <- nums){
    if (element > maximum){
      maximum = element
    }
    if (element < minimum){
      minimum = element
    }
  }
  return maximum - minimum
}